--- a/catart/gallery.html
+++ b/catart/gallery.html
@@ -13,36 +13,36 @@
         </div>
         <div class="box">
             <div class="dream">
-                <img src="images/caimg4.avif" alt="">
-                <img src="images/caimg2.avif" alt="">
-                <img src="images/cd3.avif" alt="">
-                <img src="images/cd2.avif" alt="">
-                <img src="images/caimg5.avif" alt="">
-                <img src="images/caimg6.webp" alt="">
+                <img src="caimg4.avif" alt="">
+                <img src="caimg2.avif" alt="">
+                <img src="cd3.avif" alt="">
+                <img src="cd2.avif" alt="">
+                <img src="caimg5.avif" alt="">
+                <img src="caimg6.webp" alt="">
             </div>
             <div class="dream">
-                <img src="images/caimg8.avif" alt="">
-                <img src="images/cd1.avif" alt="">
-                <img src="images/caimg7.webp" alt="">
-                <img src="images/caimg6.webp" alt="">
-                <img src="images/cd1.avif" alt="">
-                <img src="images/cd2.avif" alt="">
+                <img src="caimg8.avif" alt="">
+                <img src="cd1.avif" alt="">
+                <img src="caimg7.webp" alt="">
+                <img src="caimg6.webp" alt="">
+                <img src="cd1.avif" alt="">
+                <img src="cd2.avif" alt="">
             </div>
             <div class="dream">
-                <img src="images/caimg4.avif" alt="">
-                <img src="images/cd3.avif" alt="">
-                <img src="images/caimg2.avif" alt="">
-                <img src="images/cd2.avif" alt="">
-                <img src="images/caimg5.avif" alt="">
-                <img src="images/caimg6.webp" alt="">
+                <img src="caimg4.avif" alt="">
+                <img src="cd3.avif" alt="">
+                <img src="caimg2.avif" alt="">
+                <img src="cd2.avif" alt="">
+                <img src="caimg5.avif" alt="">
+                <img src="caimg6.webp" alt="">
             </div>
             <div class="dream">
-                <img src="images/cd2.avif" alt="">
-                <img src="images/cd3.avif" alt="">
-                <img src="images/caimg8.avif" alt="">
-                <img src="images/cd2.avif" alt="">
-                <img src="images/caimg1.avif" alt="">
-                <img src="images/cd2.avif" alt="">
+                <img src="cd2.avif" alt="">
+                <img src="cd3.avif" alt="">
+                <img src="caimg8.avif" alt="">
+                <img src="cd2.avif" alt="">
+                <img src="caimg1.avif" alt="">
+                <img src="cd2.avif" alt="">
             </div>
         </div>
         <div class="btn">
